--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   "dependencies": {
     "yargs": "^16.2.0"
   },
-  "engines" : { "node" : ">=13" },
-  "engineStrict" : true
+  "engines": {
+    "node": ">=13"
+  },
+  "engineStrict": true
 }
