--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "Abbas Dawood <abbas.dawood@bizongo.com>",
+  "contributors": [{
+    "name": "Ishan Purohit", "email": "ishan.purohit@bizongo.com"
+  }],
   "license": "ISC",
   "devDependencies": {
     "convert-csv-to-json": "^1.3.0",
@@ -18,5 +21,10 @@
   "engines": {
     "node": ">=13"
   },
-  "engineStrict": true
+  "engineStrict": true,
+  "repository": {
+    "type": "git", 
+    "url": "https://github.com/abbasdawoodbiz/bulkUpdateCatalogue.git"
+  }
+
 }
